<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LeaderboardActivity">

    <TextView
        android:text="@string/title"
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="30dp"/>
    <TextView
        android:text="@string/name"
        android:id="@+id/name"
        android:layout_below ="@id/title"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="bottom"/>
    <EditText
        android:id="@+id/editName"
        android:inputType="text"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/name"
        android:layout_toRightOf="@+id/title"
        android:layout_toEndOf="@+id/title" />
    <TextView
        android:text="@string/score"
        android:id="@+id/score"
        android:layout_below="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="bottom" />
    <EditText
        android:id="@+id/editScore"
        android:inputType="number"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/score"
        android:layout_toRightOf="@+id/title"
        android:layout_toEndOf="@+id/title" />
    <TextView
        android:text="@string/time"
        android:id="@+id/time"
        android:layout_below="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="bottom" />
    <EditText
        android:id="@+id/editTime"
        android:inputType="number"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/time"
        android:layout_toRightOf="@+id/title"
        android:layout_toEndOf="@+id/title" />
    <TextView
        android:text="@string/health"
        android:id="@+id/health"
        android:layout_below="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="bottom" />
    <EditText
        android:id="@+id/editHealth"
        android:inputType="number"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/health"
        android:layout_toRightOf="@+id/title"
        android:layout_toEndOf="@+id/title" />
    <Button
        android:id="@+id/btnAdd"
        android:text="@string/add"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_below="@+id/health"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="36dp" />
    <Button
        android:id="@+id/btnDelete"
        android:layout_toRightOf="@id/btnAdd"
        android:layout_alignBottom="@id/btnAdd"
        android:text="@string/delete"
        android:layout_width="140dp"
        android:layout_height="50dp"/>
    <Button
        android:id="@+id/btnModify"
        android:text="@string/modify"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_below="@+id/btnAdd"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <Button
        android:id="@+id/btnView"
        android:layout_toRightOf="@id/btnModify"
        android:layout_alignBottom="@id/btnModify"
        android:text="@string/view"
        android:layout_width="140dp"
        android:layout_height="50dp"/>
    <Button
        android:id="@+id/btnViewAll"
        android:text="@string/view_all"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_below="@+id/btnModify"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <Button
        android:id="@+id/btnShowInfo"
        android:layout_toRightOf="@id/btnViewAll"
        android:layout_alignBottom="@id/btnViewAll"
        android:text="@string/show_info"
        android:layout_width="140dp"
        android:layout_height="50dp"/>

</RelativeLayout>